--- a/qky-classgroup-service/build.gradle
+++ b/qky-classgroup-service/build.gradle
@@ -15,9 +15,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-parent:2.0.3.RELEASE'
     compile 'com.alibaba.spring.boot:dubbo-spring-boot-starter:2.0.0'
     compile 'org.springframework.cloud:spring-cloud-starter-zookeeper-config:2.0.0.RELEASE'
-    compile(group: "com.101tec", name: "zkclient", version: "0.9") {
-        exclude group: 'log4j'
-    }
+    compile 'com.101tec:zkclient:0.9'
     compile 'org.springframework.boot:spring-boot-starter-actuator:2.0.3.RELEASE'
     compile 'org.codehaus.janino:janino:3.0.9'
     runtime('mysql:mysql-connector-java')
